Add SonarIssuesDumper, fix Sonar violations, and expand test coverage
- Fix critical/major/minor Sonar violations across 13 production files:
  optional chaining, deprecated URL/HTTP client, field shadowing, unused
  imports, commented-out code, switch-to-if, try-with-resources, etc.
- Replace commons-httpclient:3.1 with java.net.HttpURLConnection in FileUploader
- Add SonarIssuesDumper: writes sonar-issues.json to the build work dir after
  each report run; fetches issues on demand if typesOfIssue was empty, and
  deduplicates rules that appear with severity=ALL from Priority.getPrioritiesArray
- Add factory method PDFPostJob.createGenerator() to enable unit test stubbing
- Add 9 new test classes (Events, FileUploader, IssueBuilder, IssueTypes,
  MetricDataTypes, RuleBuilder, Toc, WSParameters, PDFGenerator expansions)
  bringing total to 300 tests, 0 failures

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>